# substitution

./: Cargo.toml  README.md
.github/workflows/: build.yml  coverage.yml  tests.yml
doc/: implementation.md  specification.md  week1_log.md  week2_log.md  week3_log.md  week4_log.md  week5_log.md  week6_log.md
src/: bitset.rs  io.rs  lib.rs  main.rs  trie.rs
